fix scrollbars for past comments
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@5935 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWUserManual/skins/up.css
+++ b/extensions/SMWUserManual/skins/up.css
@@ -20,6 +20,10 @@
     vertical-align: top;
 }
 
+#uprComments {
+	overflow: auto;
+}
+
 .uprComment {
     background-color: #747474;
     color: #FFFFFF;
